Bug 404748 - "__defineSetter__ regression in FF3: no longer works with event properties when used on prototype" [p=jst@mozilla.org (Johnny Stenback) r+sr=bzbarsky a1.9=schrep]